K1J-966: Added categoryGrundForMedicinsktUnderlag